--- a/src/Components/Footer/Footer.css
+++ b/src/Components/Footer/Footer.css
@@ -1,6 +1,6 @@
 .footerMainDiv {
   background-color: #155b7f;
-  height: 270px;
+  height: auto;
   display: flex;
   color: cornsilk;
   line-height: 0.6;
