--- a/src/Components/Login/DoctorLogin/DocLogin.css
+++ b/src/Components/Login/DoctorLogin/DocLogin.css
@@ -1,20 +1,30 @@
-.main-head{
-    height: 150px;
-    background: #FFF;
+.docloginMain{
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
 }
 
 .sidenav {
-    height: 100%;
+    min-height: 400px;
     background-color: rgb(72, 92, 160);
-    overflow-x: hidden;
     padding-top: 20px;
 }
-
+.login-main-text{
+    padding-top: 20%;
+    padding-left: 20%;
+}
 .main {
     padding: 0px 10px;
 }
+.main input{
+    width: 400px;
+}
+.main button{
+    margin-right: 10px;
+    margin-top: 10px;
+}
 
-@media screen and (max-height: 450px) {
+/* @media screen and (max-height: 450px) {
     .sidenav {padding-top: 15px;}
 }
 
@@ -28,7 +38,23 @@
     }
 }
 
-@media screen and (min-width: 768px){
+
+.login-main-text{
+    margin-top: 20%;
+    padding: 60px;
+    color: #fff;
+}
+
+.login-main-text h2{
+    font-weight: 300;
+}
+
+.btn-black{
+    background-color: #000 !important;
+    color: #fff;
+} */
+
+/* @media screen and (min-width: 768px){
     .main{
         margin-left: 40%; 
     }
@@ -47,18 +73,4 @@
     .register-form{
         margin-top: 20%;
     }
-}
-.login-main-text{
-    margin-top: 20%;
-    padding: 60px;
-    color: #fff;
-}
-
-.login-main-text h2{
-    font-weight: 300;
-}
-
-.btn-black{
-    background-color: #000 !important;
-    color: #fff;
-}
+} */
