--- a/src/Components/Doctors/Doctors.css
+++ b/src/Components/Doctors/Doctors.css
@@ -1,6 +1,7 @@
 .docSearchDiv{
     padding: 30px;
     min-height: 500px;
+    max-height: 600px;
     background-color: cornsilk;
     opacity: 0.8;
     text-align: center;
