--- a/src/Components/Doctors/DocProfile.css
+++ b/src/Components/Doctors/DocProfile.css
@@ -1,6 +1,8 @@
 .profile{
-    margin: 30px 60px ;
+    margin: 30px 30px ;
+    padding: 30px;
     opacity: 0.9;
+    background-color: cadetblue;
 }
 .profileTopDiv{
     background-color: aqua;
