patient delete methord created

--- a/src/Components/Patients/Patients.css
+++ b/src/Components/Patients/Patients.css
@@ -1,5 +1,5 @@
 .patientMainDiv{
-    background-color: cadetblue;
+    background-color: rgb(196, 220, 221);
     opacity: 0.9;
     margin: 40px;
 }
