patient details link button added and card styling

--- a/src/Components/Appointments/Appointments.css
+++ b/src/Components/Appointments/Appointments.css
@@ -18,3 +18,9 @@
     margin: 10px;
     padding: 10px;
 }
+.patientDetlsBtn{
+    background-color: #155B7F;
+    border-radius: 0;
+    color: cornsilk;
+    height: 10vh;
+}
