--- a/src/Components/SignUp/SignUp.css
+++ b/src/Components/SignUp/SignUp.css
@@ -1,5 +1,6 @@
 .signupContainer {
   padding-top: 30px;
+  padding-bottom: 30px;
   background-color: rgb(154, 206, 206);
   text-align: center;
 }
