--- a/src/Components/Doctors/DocProfile.css
+++ b/src/Components/Doctors/DocProfile.css
@@ -2,19 +2,19 @@
     margin: 30px 30px ;
     padding: 30px;
     opacity: 0.9;
-    background-color: cadetblue;
+    background-color: rgb(189, 226, 228);
 }
 .profileTopDiv{
-    background-color: aqua;
+    background-color: rgb(201, 228, 228);
 }
 .profileLinksDiv{
     border: 1px solid;
     height: 50px;
-    background-color: rgb(96, 114, 114);
+    background-color: rgb(172, 201, 201);
 }
 .profileLinksDiv div{
     display: flex;
-    background-color: rgb(129, 78, 136);
+    background-color: rgb(172, 201, 201);
     justify-content: center;
     flex-direction: row;
     padding-top: 10px;
@@ -25,11 +25,11 @@
 }
 .profileAboutDiv{
     height: 200px;
-    background-color: rgb(157, 129, 235);
+    background-color: rgb(212, 207, 226);
 }
 .profileCommentsDiv{
     height: 200px;
-    background-color: rgb(207, 235, 129); 
+    background-color: rgb(218, 226, 196); 
 }
 .aboutDoctor{
     margin-top: 30px;
@@ -40,7 +40,8 @@
     flex-direction: column;
 }
 .profileBtn{
-    background-color: #155B7F;
+    width: 70%;
+    background-color: #4286a8;
     border-radius: 0;
     color: cornsilk;
     height: 10vh;
