--- a/src/Components/Appointments/Appointments.css
+++ b/src/Components/Appointments/Appointments.css
@@ -36,3 +36,42 @@
 .formSubBtn{
     margin-top: 20px;
 }
+/* -----------Popup Update window settings------------ */
+
+.display{
+    display: flex;
+    width: 25%;
+    margin-bottom: 20px;
+  }
+  .hidden{
+   display: none;
+  }
+  .popup-box {
+    color: black;
+    position: fixed;
+    background: #25131350;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+  
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 1;
+  }
+   
+  .popup-inner {
+    position: relative;
+    width: 50%;
+    margin: 0 auto;
+    height: auto;
+    background: rgb(226, 219, 219);
+    border-radius: 4px;
+    padding: 20px;
+    border: 1px solid #999;
+    overflow: auto;
+  }
+.formBtns{
+  margin-top: 10px;
+}
