profile patch form created

--- a/src/Components/Doctors/DoctorCard.css
+++ b/src/Components/Doctors/DoctorCard.css
@@ -13,6 +13,9 @@
 .docImage{
     width: 40%;
 }
+.contactIcon{
+    width: 20%;
+}
 .docCardBtn{
     background-color: #155B7F;
     border-radius: 0;
