--- a/src/Components/Profile/Profile.css
+++ b/src/Components/Profile/Profile.css
@@ -5,6 +5,7 @@
     background-color: rgb(66, 66, 235);
     color: rgb(238, 234, 229);
     height: 8vh;
+    width:150px;
 }
 /* .editProfileDiv {
 }
