doctor serch functionality activated

--- a/src/Components/Appointments/NewAppointment.css
+++ b/src/Components/Appointments/NewAppointment.css
@@ -3,6 +3,7 @@
 }
 .serchDoctor{
     background-color: bisque;
+    margin-top: 10px;
     padding: 10px;
     margin-left: 10px;
     margin-right: 10px;
