--- a/src/Components/Locations/Locations.css
+++ b/src/Components/Locations/Locations.css
@@ -2,7 +2,8 @@
   background-color: rgb(219, 216, 216);
 }
 .mapDiv {
-  padding-top: 50px;
+  padding-top: 10px;
+  padding-left: 10px;
   text-align: center;
 }
 .locationDetails {
