--- a/src/Components/SignUp/SignUp.css
+++ b/src/Components/SignUp/SignUp.css
@@ -28,3 +28,41 @@
   margin-top: 20px;
   width: 20%;
 }
+/* -----------Popup Confirm window settings------------ */
+
+.display{
+  display: flex;
+  width: 25%;
+  margin-bottom: 20px;
+}
+.hidden{
+ display: none;
+}
+.popupbox {
+  color: black;
+  position: fixed;
+  background: #25131350;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 1;
+}
+ 
+.popupinner {
+  position: relative;
+  width: 50%;
+  margin: 0 auto;
+  height: 50%;
+  background: rgb(226, 219, 219);
+  border-radius: 4px;
+  padding: 20px;
+  border: 1px solid #999;
+  overflow: auto;
+}
+.formSubBtn{
+margin-left: 10px;
+}
