location card onclick zoom location

--- a/src/Components/Locations/Locations.css
+++ b/src/Components/Locations/Locations.css
@@ -1,6 +1,10 @@
 .locationDiv {
   background-color: rgb(219, 216, 216);
 }
+.locationCard:hover{
+  cursor: pointer;
+  background-color: antiquewhite;
+}
 .mapDiv {
   padding-top: 10px;
   padding-left: 30px;
