--- a/src/Components/Patients/Patients.css
+++ b/src/Components/Patients/Patients.css
@@ -29,3 +29,8 @@
     opacity: 0.8;
     text-align: center;
 }
+.serachPatientinnerDiv{
+ display: flex;
+ justify-content: center;
+ align-items: center;
+}
