--- a/src/Components/Doctors/Doctors.css
+++ b/src/Components/Doctors/Doctors.css
@@ -17,3 +17,8 @@
 .formnput{
     padding-left: 0vh;
 }
+.filterBySpeciality{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
