doc profile edit page created

--- a/src/Components/Appointments/NewAppointment.css
+++ b/src/Components/Appointments/NewAppointment.css
@@ -16,7 +16,7 @@
     padding-top: 50px;
     align-items: center;
 }
-.doctorCrad img{
+.doctorCradDiv img{
     height: 100px;
     width: 120px;
 }
