--- a/src/Components/NavBar/NavBar.css
+++ b/src/Components/NavBar/NavBar.css
@@ -25,8 +25,11 @@
   text-decoration: underline;
 }
 .loginLogoutDiv {
-    display: flex;
-  width: 25%;
+display: flex;
+width: 25%;
+justify-content: center;
+
+
 }
 
 .menuBtn{
