--- a/src/Components/Appointments/NewAppointment.css
+++ b/src/Components/Appointments/NewAppointment.css
@@ -3,6 +3,14 @@
     justify-content: center;
     flex-direction: column;
 }
+.docCardMainDiv{
+    background-color: rgb(174, 238, 217);
+    margin: 10px;
+    padding: 10px;
+}
+.docCardMainInnerDiv{
+    background-color: beige;
+}
 .serchDoctor{
     background-color: bisque;
     margin-top: 10px;
@@ -16,7 +24,8 @@
     padding-top: 50px;
     align-items: center;
 }
-.doctorCradDiv img{
-    height: 100px;
+.doctorCradBox img{
+    position:static;
+    height: 120px;
     width: 120px;
 }
