--- a/src/Components/NavBar/NavBar.css
+++ b/src/Components/NavBar/NavBar.css
@@ -66,7 +66,7 @@ justify-content: center;
     padding:0;
     list-style:none;
     position:relative;
-    z-index:999999990;
+    z-index:1;
     border-radius: 3px;
 } 
 
