--- a/src/Components/Footer/Footer.css
+++ b/src/Components/Footer/Footer.css
@@ -22,4 +22,9 @@
     text-decoration: underline;
   }
 
+  @media only screen and (max-width: 600px) { 
 
+    .footerMainDiv {
+      line-height: 1;
+    }
+  }
