--- a/src/Components/Locations/Locations.css
+++ b/src/Components/Locations/Locations.css
@@ -44,3 +44,9 @@
   margin-left: 10px;
   margin-right: 10px;
 }
+@media only screen and (max-width: 600px) { 
+
+  .locationDetails div{
+    margin-top: 20px;
+  }
+}
