--- a/src/Components/NavBar/NavBar.css
+++ b/src/Components/NavBar/NavBar.css
@@ -6,7 +6,7 @@
 }
  @media only screen and (max-width: 600px) { 
     .navBarMainDiv {
-         display: inline-block; 
+         display: flex; 
          height: auto;
         flex-direction: column;
         justify-content: center;
@@ -15,11 +15,15 @@
      } 
      .mainLinksDiv{
         display: flex;
+        justify-content: center;
         flex-direction: row;
         width: auto;
     } 
     .logoDiv{
-        justify-content: space-evenly;
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        align-content: center; 
     } 
    } 
 
