--- a/src/Components/Appointments/Appointments.css
+++ b/src/Components/Appointments/Appointments.css
@@ -1,6 +1,7 @@
 .mainAppointmentContainer{
     background-color: rgb(248, 227, 201);
     opacity: 0.9;
+    margin-right: 0;
 }
 .appointmentCardHead{
   background-color: antiquewhite;
