--- a/src/Components/Doctors/Doctors.css
+++ b/src/Components/Doctors/Doctors.css
@@ -6,6 +6,12 @@
     opacity: 0.8;
     text-align: center;
 }
+@media only screen and (max-width: 600px) { 
+    .docSearchDiv{
+        min-height: auto;
+        max-height: auto;
+    }
+   } 
 .searchBtn{
     margin: 1vh;
 }
