--- a/src/Components/Patients/Patients.css
+++ b/src/Components/Patients/Patients.css
@@ -34,3 +34,13 @@
  justify-content: center;
  align-items: center;
 }
+
+@media only screen and (max-width: 800px) { 
+    .patientCardDiv{
+        display: flex;
+        flex-direction: column;
+    }
+    .serachPatientinnerDiv{
+        text-align: center;
+    }
+}
