--- a/src/Components/Doctors/Doctors.css
+++ b/src/Components/Doctors/Doctors.css
@@ -11,6 +11,12 @@
         min-height: auto;
         max-height: auto;
     }
+    .formnput{
+        padding-right: 0;
+    }
+    .doctorMainDiv{
+        margin-left: 0;
+    }
    } 
 .searchBtn{
     margin: 1vh;
