--- a/src/Components/Profile/Profile.css
+++ b/src/Components/Profile/Profile.css
@@ -20,11 +20,12 @@
     height: 8vh;
     width:150px;  
 }
-/* .editProfileDiv {
-}
-
-.profileNewAppointmentBtn {
-} */
 .specialityDiv{
     display: flex;
+}
+@media only screen and (max-width: 1020px) { 
+    .profileDetails{
+      display: flex;
+      flex-direction: column;
+  }
 }
