--- a/src/Components/Doctors/DocProfile.css
+++ b/src/Components/Doctors/DocProfile.css
@@ -17,6 +17,9 @@
     .profileLinksDiv{
         height: auto;
     }
+    .profile{
+        margin: 5px 5px;
+    }
    } 
 .profileAboutDiv h5{
     margin-top: 2vh;
