--- a/src/Components/Profile/Profile.css
+++ b/src/Components/Profile/Profile.css
@@ -29,3 +29,10 @@
       flex-direction: column;
   }
 }
+
+@media only screen and (max-width: 800px) { 
+    .editProfileDiv{
+      display: flex;
+      flex-direction: column;
+  }
+}
