--- a/src/Components/NavBar/NavBar.css
+++ b/src/Components/NavBar/NavBar.css
@@ -4,6 +4,26 @@
   background-color: rgb(226, 240, 240);
   display: flex;
 }
+.nav-bar-links{
+  text-decoration: none;
+  position: relative;
+}
+.nav-bar-links::after{
+  content: "";
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  height: 2px;
+  background: #77a6f7;
+  transform: scaleX(0);
+  transform-origin: left;
+}
+.nav-bar-links:hover::after{
+  transform: scaleX(1);
+  transition: 250ms
+}
+
 @media only screen and (max-width: 600px) {
   .navBarMainDiv {
     display: flex;
@@ -62,9 +82,9 @@ margin-right: 60px;
   color: #000000;
   text-decoration: none;
 }
-.mainLinksDiv div a:hover {
+/* .mainLinksDiv div a:hover {
   text-decoration: underline;
-}
+} */
 .loginLogoutDiv {
   display: flex;
   width: 25%;
