--- a/src/Components/SignUp/SignUp.css
+++ b/src/Components/SignUp/SignUp.css
@@ -66,3 +66,11 @@
 .formSubBtn{
 margin-left: 10px;
 }
+@media only screen and (max-width: 768px) {
+  .signupInnerContainer{
+    flex-direction: column;
+  }
+  .signUpformInnerDiv1, .signUpformInnerDiv2 {
+    padding-left: 5%;
+  }
+}
