--- a/src/Components/Home/Home.css
+++ b/src/Components/Home/Home.css
@@ -1,4 +1,6 @@
-.mainLowerSection{
-    display: flex;
-    flex-direction: column;
+@media only screen and (max-width: 800px) {
+    .mainLowerSection{
+        display: flex;
+        flex-direction: column;
+    }
 }
