--- a/src/Components/Doctors/Doctors.css
+++ b/src/Components/Doctors/Doctors.css
@@ -26,9 +26,9 @@
   flex-direction: column;
   align-items: center;
 }
-@media only screen and (max-width: 600px) {
+@media only screen and (max-width: 768px) {
   .docSearchDiv {
-    position: initial;
+    position:relative;
     min-height: auto;
     max-height: auto;
   }
