--- a/src/Components/Locations/Locations.css
+++ b/src/Components/Locations/Locations.css
@@ -4,7 +4,7 @@
 }
 .locationCard:hover{
   cursor: pointer;
-  background-color: antiquewhite;
+  background-color: rgb(248, 229, 203);
 }
 .mapDiv {
   padding-top: 10px;
@@ -28,7 +28,7 @@
   width: 60%;
 }
 .locationDetails p {
-  line-height: 0.5;
+  line-height: 1.5;
 }
 .locationDetails h6 {
   padding-bottom: 5px;
