--- a/src/Components/NavBar/NavBar.css
+++ b/src/Components/NavBar/NavBar.css
@@ -121,7 +121,9 @@ margin-right: 60px;
   display: flex;
   justify-content: center;
   flex-direction: column;
+  overflow:hidden;
   padding-right: 10px;
+  padding-top: 40px;
 }
 .menuBtn {
   width: 30%;
