styling on span in carousel

--- a/src/Components/Locations/Locations.css
+++ b/src/Components/Locations/Locations.css
@@ -73,3 +73,9 @@
     width: 90%;
   }
 }
+
+/* ----------Carousel---------------- */
+
+#carouselExampleIndicators span{
+  color: rgb(247, 248, 252);
+}
