--- a/src/Components/Locations/Locations.css
+++ b/src/Components/Locations/Locations.css
@@ -2,7 +2,7 @@
   background-color: rgb(219, 216, 216);
   margin-right: 0;
 }
-.locationCard:hover{
+.locationCard:hover {
   cursor: pointer;
   background-color: rgb(248, 229, 203);
 }
@@ -11,12 +11,13 @@
   padding-left: 30px;
   text-align: center;
 }
-@media only screen and (max-width: 600px) { 
-  .locationDiv{
-   display: flex;
-   flex-direction: column;
+
+@media only screen and (max-width: 600px) {
+  .locationDiv {
+    display: flex;
+    flex-direction: column;
   }
- }
+}
 .locationDetails {
   padding: 20px;
   color: rgb(41, 35, 12);
@@ -33,41 +34,41 @@
 .locationDetails h6 {
   padding-bottom: 5px;
 }
-.locationContactDetls{
-    padding-top: 30px;
+.locationContactDetls {
+  padding-top: 30px;
 }
-.locationImage{
-    display: flex;
-    justify-content: space-evenly
+.locationImage {
+  display: flex;
+  justify-content: space-evenly;
 }
-.vl{
-    border-left: solid #d4cfcf;
-    height: 90%;
+.vl {
+  border-left: solid #d4cfcf;
+  height: 90%;
 }
-.serchLocation{
+.serchLocation {
   background-color: rgb(216, 211, 205);
   margin-top: 10px;
   padding: 10px;
   margin-left: 10px;
   margin-right: 10px;
 }
-@media only screen and (max-width: 600px) { 
-  .locationDetails{
-    padding:10px;
-    margin:5px;
+@media only screen and (max-width: 600px) {
+  .locationDetails {
+    padding: 10px;
+    margin: 5px;
   }
 
-  .locationDetails div{
+  .locationDetails div {
     margin-top: 20px;
   }
-  .locationInnerDiv{
+  .locationInnerDiv {
     padding-right: 0;
   }
-  .locationDetails p{
+  .locationDetails p {
     line-height: 1;
     margin-bottom: 0;
   }
-  .locationDetails img{
+  .locationDetails img {
     height: 70%;
     margin-top: 30%;
     width: 90%;
@@ -76,6 +77,6 @@
 
 /* ----------Carousel---------------- */
 
-#carouselExampleIndicators span{
+#carouselExampleIndicators span {
   color: rgb(247, 248, 252);
 }
