--- a/src/Components/BackendUnavailability/backendUnAvailability.css
+++ b/src/Components/BackendUnavailability/backendUnAvailability.css
@@ -1,9 +1,9 @@
 .errorPopupbox {
     color: black;
-    position: fixed;
+    position: sticky;
     background: #25131350;
-    width: fit-content;
-    height: 50%;
+    max-width: 100%;
+    height: auto;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -13,15 +13,14 @@
   }
   
   .errorPopupinner {
-    position: relative;
+    position: sticky;
     width: 70%;
-    margin: 0 auto;
     height: 70%;
     background: rgb(226, 219, 219);
     border-radius: 4px;
     padding: 20px;
+    margin: 50px;
     border: 1px solid #999;
-    overflow: auto;
   }
   .errorContent{
     color: brown;
