--- a/src/Components/Appointments/Appointments.css
+++ b/src/Components/Appointments/Appointments.css
@@ -141,12 +141,16 @@ line-height: 0.6;
     z-index: 1;
   }
    
-  .popup-inner {
+  .popup-innerBox {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
     position: relative;
     width: 50%;
     margin: 0 auto;
     height: 80%;
-    background: rgb(226, 219, 219);
+    background-color: #E2F0F0;
+    background: #f3f7d7;
     border-radius: 4px;
     padding: 20px;
     border: 1px solid #999;
