--- a/src/Components/Doctors/Doctors.css
+++ b/src/Components/Doctors/Doctors.css
@@ -29,6 +29,42 @@ input:focus {
   flex-direction: column;
   align-items: center;
 }
+.dragAndDropMainDiv{
+  display: flex;
+  flex-direction: row;
+  background-color: #bff8e6;
+  border: 3px solid rgb(199, 198, 198);
+  border-style: outset;
+}
+.container{
+  display: flex;
+  flex-direction: column;
+  justify-content:space-around;
+  align-items: center;
+  background-color: #CEE6D9;
+  padding: 10px;
+}
+.blankContainer{
+  background-color: rgb(241, 237, 237);
+}
+.excahngeIconDiv{
+  display: flex;
+  flex-direction: column;
+  justify-content:center;
+  align-items: center;
+}
+.draggable{
+  margin: 5px;
+}
+.excahngeIcon{
+  width: 20px;
+  height: 20px; 
+  position: relative;
+}
+.draggable.dragging{
+  background-color: rgb(178, 233, 233);
+  opacity: 0.5;
+}
 @media only screen and (max-width: 768px) {
   .docSearchDiv {
     position:relative;
